Simplify builder